k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oc-provider-frontend
spec:
  selector:
    app: oc-provider-frontend
  ports:
    - port: 80
      targetPort: 80
