k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oc-provider-ingress
  namespace: oc-provider
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: provider.on-track.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oc-provider-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: oc-provider-backend
                port:
                  number: 80
